force-app/main/default/objects/Payments_c__c/Payments_c__c.object-meta.xml
<CustomObject>
    <label>Payments</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>Payments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>