force-app/main/default/objects/Payments_c__c/fields/Payment_Methos__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methos__c</fullName>
    <label>Payment Methos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>