force-app/main/default/objects/Payments_c__c/validationRules/Validate_Payment_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Payment_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Payment amount must be greater than zero</errorMessage>
</ValidationRule>